# calligro

./: .eslintcache  .gitignore  CHANGELOG.md  README.md  RELEASE.md  asset-manifest.json  build-electron.ps1  eslint.config.js  index.html  logo.af  manifest.json  package-lock.json  package.json  privacy.html  robots.txt  sider.yml  sitemap.xml  tsconfig.app.json  tsconfig.json  tutorial-old.html  tutorial.html  unicode-range-json.d.ts  upload-itch.ps1  vite.config.ts  webapp.html
assets/: LoadedWorkArea-6bQBNQaT.js  LoadedWorkArea-BPv5QTwm.js  LoadedWorkArea-BrwFI7Tl.js  LoadedWorkArea-CQ6LoGmx.js  LoadedWorkArea-CfnX4Z_O.css  LoadedWorkArea-DAhn7VIe.js  LoadedWorkArea-DT7Lj3YS.js  LoadedWorkArea-ZVAwp1uY.css  LoadedWorkArea-okVJ4hYf.js  Step2-Blki7nKM.js  Step2-CuE8nGkZ.css  allPaths-C-Nxem6A.js  allPaths-C54iBIO0.js  allPaths-DFh_YVSO.js  allPaths-DvtnvUUD.js  allPaths-N7DbYP83.js  allPaths-ULL9NQ8U.js  allPaths-nYUd3yAx.js  allPathsLoader-B4LopuX_.js  allPathsLoader-B5xXT4WG.js  allPathsLoader-BIHfXNcc.js  allPathsLoader-CLeFd1hg.js  allPathsLoader-D0xEcmtT.js  allPathsLoader-DYnKOQr4.js  allPathsLoader-DcBgAfIG.js  app-B4EHanD_.js  app-Big-3WdT.js  app-Blmw2r4u.css  app-CgmGfzFC.js  app-CrsAwvWV.js  app-D2py-rvg.js  app-DPFuXnKo.js  app-KeAgjAww.js  app-SNX2SECY.js  app-muYEU0Ul.css  app-sSYtXb6Z.css  index-03c8d4Gh.js  index-PKNBViIU.js  splitPathsBySizeLoader-B0kDgcUo.js  splitPathsBySizeLoader-BEZy3dpS.js  (+5 more)
electron_resources/: package-lock.json  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+446 files in other folders)
