[package]
name = "calligro"
version = "0.1.0"
description = "A Tauri App"
authors = ["Bitmap font creator"]
license = "AGPL-3.0 license"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "calligro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
font-enumeration = "0.9.0"
itertools = "0.14.0"
